showcase/apps/gitops-showcase/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-showcase
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: gitops-showcase
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gitops-showcase
    spec:
      automountServiceAccountToken: false
      containers:
        - name: web
          image: nginxinc/nginx-unprivileged:1.27-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: ui
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
            - name: ui
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: ui
          configMap:
            name: gitops-showcase-ui
            defaultMode: 0444
