showcase/apps/gitops-showcase/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-showcase
spec:
  selector:
    app.kubernetes.io/name: gitops-showcase
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
