showcase/apps/gitops-showcase/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitops-showcase
spec:
  to:
    kind: Service
    name: gitops-showcase
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
